feat: segregacao faturamento mensal e anual

--- a/src/paginas/cliente/style.css
+++ b/src/paginas/cliente/style.css
@@ -112,6 +112,10 @@
   overflow-y: scroll;
 }
 
+.cliente-tipo-faturamento {
+  text-transform: capitalize;
+}
+
 #cliente-faturamento-mensal {
   width: 100%;
   background-color: var(--verde);
