--- a/src/paginas/grupo-economico/style.css
+++ b/src/paginas/grupo-economico/style.css
@@ -83,7 +83,8 @@
   color: var(--branco);
   padding: 1%;
   display: flex;
-  justify-content: end;
+  flex-direction: column;
+  align-items: end;
   border: 4px solid var(--azul-borda);
   border-radius: 7px;
   height: fit-content;
