--- a/src/componetes/pop-up-importa-contrato/style.css
+++ b/src/componetes/pop-up-importa-contrato/style.css
@@ -24,17 +24,43 @@
 }
 
 #titulo-pop-up-importa-contratos {
-  margin-bottom: 1rem;
-  border-bottom: 1px solid var(--preto);
   width: 100%;
   text-align: center;
-  padding-bottom: 1rem;
+}
+
+.pop-up-importa-contratos-botao {
+  width: 60%;
+  padding: 3%;
+  border-radius: 5px;
+  margin-top: 4%;
+  text-align: center;
+  cursor: pointer;
 }
 
 #form-pop-up-importa-contratos {
-    width: 50%;
-    background-color: var(--preto);
-    color: var(--branco);
-    padding: 3%;
-    border-radius: 5px;
+  background-color: var(--preto);
+  color: var(--branco);
+}
+
+#form-pop-up-importa-contratos:hover {
+  background-color: var(--preto-hover);
+}
+
+#pop-up-importa-contratos-label {
+  cursor: pointer;
+}
+
+#container-pop-up-importa-contratos p {
+  border-top: 1px solid var(--preto);
+  padding-top: 1rem;
+  font-size: 0.9rem;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+#pop-up-importa-contratos-linha {
+  width: 100%;
+  height: 1px;
+  background-color: var(--preto);
+  margin-top: 1rem;
 }
