--- a/src/paginas/clientes/style.css
+++ b/src/paginas/clientes/style.css
@@ -29,26 +29,39 @@
   font-size: 0.9rem;
 }
 
-#clientes-botao {
+.clientes-botao {
   border-radius: 5px;
   padding: 1%;
-  width: 24%;
+  width: 18%;
   margin-right: 4%;
   font-size: 0.9rem;
   cursor: pointer;
-  background-color: var(--verde);
-  border: 1px solid var(--azul-borda);
 }
 
-#clientes-botao.disabled,
-#clientes-botao.disabled:hover {
+.clientes-botao.disabled,
+.clientes-botao.disabled:hover {
   cursor: not-allowed;
   background-color: #ccc;
   color: #666;
 }
 
-#clientes-botao:hover {
+#clientes-add-edit-botao {
+  background-color: var(--verde);
+  border: 1px solid var(--azul-borda);
+}
+
+#clientes-add-edit-botao:hover {
   background-color: var(--verde-hover);
+}
+
+#clientes-filtrar {
+  background-color: var(--azul-borda);
+  border: 1px solid var(--preto);
+  color: var(--branco);
+}
+
+#clientes-filtrar:hover {
+  background-color: var(--azul-borda-hover);
 }
 
 #tooltip-container {
