--- a/src/componetes/navbar/style.css
+++ b/src/componetes/navbar/style.css
@@ -24,6 +24,11 @@
   flex-direction: column;
 }
 
+#navbar-client {
+  display: flex;
+  justify-content: space-between;
+}
+
 #navbar-links .link,
 #navbar-client {
   color: var(--branco);
@@ -71,4 +76,99 @@
 
 #navbar-nomeUsuario {
   font-size: 1rem;
+}
+
+#navbar-btn-notificacoes {
+  background: none;
+  border: none;
+  position: relative;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.badge-notificacoes {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background: red;
+  color: white;
+  font-size: 10px;
+  border-radius: 50%;
+  padding: 2px 6px;
+}
+
+.toast-notificacoes {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 14px;
+  color: #f1f1f1;
+  background: #1c1c1e;
+  border-radius: 12px;
+  width: 300px;
+  font-family: "Inter", sans-serif;
+}
+
+.toast-notificacoes h4 {
+  margin: 0 0 10px 0;
+  font-size: 16px;
+  color: #ffd54f;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.toast-item {
+  background: #2a2a2c;
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 14px;
+  color: #e5e5e5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background 0.2s ease-in-out;
+}
+
+.toast-item:hover {
+  background: #333335;
+}
+
+.toast-item p {
+  margin: 0;
+  flex: 1;
+  line-height: 1.3;
+}
+
+.toast-link {
+  background: linear-gradient(90deg, #007bff, #009dff);
+  border: none;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-left: 10px;
+}
+
+.toast-link:hover {
+  background: linear-gradient(90deg, #009dff, #00b4ff);
+  transform: scale(1.05);
+}
+
+.toast-fechar {
+  background: transparent;
+  border: none;
+  color: #aaa;
+  font-size: 13px;
+  margin-top: 8px;
+  cursor: pointer;
+  align-self: flex-end;
+}
+
+.toast-fechar:hover {
+  color: #fff;
 }
