--- a/src/componetes/navbar/style.css
+++ b/src/componetes/navbar/style.css
@@ -126,8 +126,10 @@
   font-size: 14px;
   color: #e5e5e5;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
   align-items: center;
+  text-align: center;
   transition: background 0.2s ease-in-out;
 }
 
