feat: update toast notification styles to improve usability and prevent overflow

--- a/src/componetes/navbar/style.css
+++ b/src/componetes/navbar/style.css
@@ -107,6 +107,8 @@
   border-radius: 12px;
   width: 300px;
   font-family: "Inter", sans-serif;
+  max-height: 68vh;
+  overflow-y: auto;
 }
 
 .toast-notificacoes h4 {
